--- a/gb/15/10/8/n4545233.md
+++ b/gb/15/10/8/n4545233.md
@@ -14,46 +14,34 @@
 <p>或许沉默的大多数人，也早已看出中国正遭遇不可逆的危机。但他们选择沉默。</p>
 <p>我不沉默，因为我想起马丁?内莫勒的悲鸣，我留下纪录，发出声音。◇</p>
 <p>责任编辑：古云</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451507.md#1">【南加随笔】尼泊尔救灾日记(一)飞往加德满都</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451511.md#1">南加随笔：尼泊尔救灾日记(二)杜立卡尔医院见闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451512.md#1">【南加随笔】尼泊尔救灾日记(三)直升机村落救援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451522.md#1">心灵看世界－－“沙漠之钻”胡佛水坝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451523.md#1">南加随笔：漫话珠山八友 (一)</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/14/n4479766.md#1">【南加诗园】山海的女儿（词曲）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/4/n4495362.md#1">华裔学生美国路(一) 学生实习签证CPT</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/11/n4500977.md#1">华裔学生美国路(二) 学生工作签证─OPT或H1B</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/8/n4545233.md#1">【南加随笔】想起马丁?内莫勒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/21/n4554714.md#1">南加随笔：乡居随笔﹙一﹚</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/5/n4520588.md#1">纳粹黄金火车发现人上电视露真容</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/7/n4521831.md#1">为难民呐喊 22年前歌曲翻红</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/11/n4524882.md#1">纳粹黄金火车雷达图片曝光 发现二战坦克</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/13/n4526487.md#1">处理难民政策不同 引发奥地利匈牙利龃龉</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/18/n14353459.md#1">【未解之谜】男子从尸袋中复活 分享来自天堂的10个原则</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352554.md#1">【十字路口】美国总统预言盘点 谁是天选之人？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/25/n12575680.md#1">如玉树临风 张养浩散曲赏析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352107.md#1">飓风骤起翻恶浪 大难不死去到另外空间神仙地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/20/n14354478.md#1">【未解之谜】濒死看见未来 人类大变革正在来临?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/18/n14353158.md#1">【晚间新闻】俄乌战局势升级 美证实朝鲜出兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356540.md#1">【新闻大破解】耶伦忧关税墙 川普欲重塑世贸？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355921.md#1">【思想领袖】中共威胁美国 并正向战争过渡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14355149.md#1">金价再创新高 未来走势如何？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355636.md#1">中国多地海水倒灌 官方称中外无先例 民不安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14355195.md#1">与徒弟云朵10年前就解约 刀郎公司声明引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355269.md#1">赵丽颖再度封后 与5岁儿子互动获赞母爱爆棚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14355254.md#1">薛之谦音乐节上减少互动 引全场喊“退票”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355923.md#1">张雨绮疑陷代孕风波 两档综艺节目镜头被剪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356631.md#1">范冰冰为新片学插秧 不慎跌坐泥潭获赞敬业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14354858.md#1">这一物可以替车窗除雾 颠覆你的想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356187.md#1">为什么航空公司会超卖机位？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355312.md#1">成功摆脱胰岛素 日专家饮食法让生活焕然一新</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/19/n14353934.md#1">压力太大影响健康 9种立即舒缓压力的方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/19/n14354250.md#1">不要再晚睡了！大脑会中毒</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/8/n14502333.md#1">宰相肚里能撑船——北宋贤相王旦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520992.md#1">【古道人生】招了个强盗做女婿 差点惹大祸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/23/n13808589.md#1">【神韵早期节目】西北鼓舞（2010年制作）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543089.md#1">【唐青看时事】川普的迷雾外交</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542744.md#1">【直播】川普视察佛州新移民拘留设施</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541430.md#1">Lululemon起诉Costco出售露露柠檬仿冒品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541585.md#1">地球神秘“心跳”正在分裂非洲大陆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541824.md#1">北京突抛中央决策机构条例 专家：证习失权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542229.md#1">胡一天靠直播还房贷 “673天没进组”登热搜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542143.md#1">饰习仲勋夺白玉兰视帝 靳东惹网友不满和吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542957.md#1">末日预言疯传 唐绮阳坦言已录好影片交代一事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542863.md#1">鹿晗暴瘦被疑深陷情伤 陈赫帮好友回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542189.md#1">蔡澜膝下无子 遗产分配引关注 助理四字回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541558.md#1">南海海槽强震倒数中？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542520.md#1">研究：这样喝咖啡可以让你活久一点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541784.md#1">在地毯上喷洒这一物 可以防止灰尘黏住</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536093.md#1">如何健康吃外食？营养师教你“无敌搭配术”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539355.md#1">新研究：每天跳跃几分钟可增强骨骼防骨折</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/8/n4545233.htm">【南加随笔】想起马丁?内莫勒</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/15/10/8/n4545233.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
