--- a/gb/15/10/21/n4554714.md
+++ b/gb/15/10/21/n4554714.md
@@ -18,39 +18,38 @@
 <p>责任编辑：古云</p>
 <p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451512.md#1">【南加随笔】尼泊尔救灾日记(三)直升机村落救援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451522.md#1">心灵看世界－－“沙漠之钻”胡佛水坝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451523.md#1">南加随笔：漫话珠山八友 (一)</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/6/n4451526.md#1">心灵看世界－－金门大桥</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/10/n4523961.md#1">南加随笔：国情不同 美德不同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/8/n4545233.md#1">【南加随笔】想起马丁?内莫勒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367299.md#1">感动川普当选 聊聊多年才看懂的《阿甘正传》的爱情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/26/n14317873.md#1">宝藏在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/26/n14317852.md#1">亲戚之城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364228.md#1">立冬养精蓄锐 补肾保养日常六招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363872.md#1">太白昼现女主昌 寇准再刚也无奈呀！（1）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358064.md#1">效职冥府的清朝进士吐露什么天机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358403.md#1">【唐风影评】《驴得水》中国电影的红楼梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369186.md#1">【秦鹏观察】川普对国防部洗牌 废除教育部？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368926.md#1">【新闻大破解】川普组反共内阁 三战风险下降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367396.md#1">11月在Costco买啥 19年老员工推荐8种东西</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/14/n14350363.md#1">美老兵斥《长津湖》造假镜头：是美军赢了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14367876.md#1">成本过亿 黄晓明《戴假发的人》预售仅2.1万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367685.md#1">沈春华自曝在上海机场重摔 围巾又卷入输送带</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14369016.md#1">孙俪再携一对儿女挺邓超 曝光另类育儿经</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368027.md#1">五月天跨年6场15万张票完售 粉丝哀喊：没买到票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368025.md#1">如何去除墙上的霉菌？ 专家推荐用这一物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368489.md#1">研究显示 每天做这件事5分钟就可以降血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365327.md#1">三大护眼营养素 这样吃胜过保健品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367601.md#1">为何你老是忘记事情？ 专家：这对大脑有益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364166.md#1">研究：十字花科蔬菜比其它蔬菜更能降低血压</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/22/n14514996.md#1">【未解之谜】外星生命真来了？K2-18b炸裂证据！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/17/n14511321.md#1">唐诗宋词中“真”之境界赏析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/14/n14508557.md#1">东坡的一面哈哈镜  笑话人生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/23/n14516204.md#1">学生为什么不喜欢学历史？（三）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385713.md#1">【古道人生】弟子216人 为何只有2人修成升天</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/27/n14518979.md#1">【直播】布鲁斯主持国务院简报会（5/27）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14518229.md#1">【音乐】神韵乐团二团 音乐会选播｜首播：美东时间 6月7日 晚间8:00</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/27/n14518945.md#1">【纪元焦点】帮中共建警务站 美籍华人或被重判</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14517920.md#1">研究：地核蕴藏巨量黄金 正外泄到地壳中</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/25/n14517588.md#1">赵丽颖删除三帖文 此前回应恋情传闻引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14517671.md#1">被传东山再起 胡春华吊唁越南前元首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14518257.md#1">45岁高圆圆自曝几乎没有社交 网友惊讶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/24/n14517122.md#1">夺《歌手2025》两连冠 单依纯曝流量密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/25/n14517212.md#1">真人百兽王《圣战士》杀青 上映管道、日期未知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/24/n14517106.md#1">中共官方办艺人税务培训班 名单曝光登热搜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/25/n14517281.md#1">在花园里善用这一物 好处多多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14517771.md#1">如何防止桃子切开后变褐色？ 专家教你这招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/23/n14516486.md#1">蒜香柠檬辣味虾仁 10分钟完成我最爱的虾料理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/27/n14518561.md#1">别对气炸锅做这件事 你才不会气炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/17/n14511546.md#1">可治疗肥胖？声音对人体细胞的医学功效</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/21/n4554714.htm">南加随笔：乡居随笔﹙一﹚</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/15/10/21/n4554714.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
